# target-everyaction

./: .gitignore  pyproject.toml
target_everyaction/: auth.py  client.py  sinks.py  target.py
