[tool.poetry]
name = "target-everyaction"
version = "0.1.0"
description = "Singer target for EveryAction, built with the Meltano SDK for Singer Targets."
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.9.0"
target-hotglue = {git = "https://gitlab.com/hotglue/target-hotglue-sdk.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
target-everyaction = 'target_everyaction.target:TargetEveryAction.cli'
